--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 datasets/
 log/
-#FacSVM_Rank/data/
-#baselines/FacSVM_Rank/eval/
+data/
+eval/
 performance_outlook/input/
 performance_outlook/output/
 saved_model/
